# psv-Onscripter

./: .gitignore  CMakeLists.txt  DirectReader.cpp  GUI_Main.cpp  GUI_Plugin.cpp  GUI_Plugin.h  GUI_Utils.cpp  GUI_Utils.h  GUI_common.h  Makefile  ONScripter.cpp  README.md  build.sh
.github/workflows/: build_vitavpk.yml  vita_onsjh.yml
asset/: bg.psd
script/: build_vitavpk.sh  install_vitasdk.sh  send_vitaeboot.sh  send_vitaeboot2.sh  send_vitavpk.sh
src/common/: filesystem.cpp  filesystem.h  version.h  vita_sbrk.c
src/onsjh/: AnimationInfo.cpp  CMakeLists.txt  DirectReader.cpp  FontInfo.cpp  LUAHandler.cpp  NsaReader.cpp  ONScripter.cpp  ONScripter.h  ONScripter_animation.cpp  ONScripter_command.cpp  ONScripter_event.cpp  ONScripter_file.cpp  ONScripter_image.cpp  ONScripter_rmenu.cpp  ONScripter_sound.cpp  Parallel.h  SarReader.cpp  ScriptHandler.cpp  ScriptParser.cpp  ScriptParser.h  ScriptParser_command.cpp  direct_draw.h  export.yml  onscripter_main.cpp
src/onsjh_vitagui/: CMakeLists.txt  GUI_Main.cpp  GUI_Utils.cpp  GUI_Utils.h  GUI_common.h  vitaPackage.cpp
vpkinstall/: filesystem.cpp  vitaPackage.cpp
